--- a/startapp_2000/index.html
+++ b/startapp_2000/index.html
@@ -49,7 +49,6 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-
             <a href="#reg">Registration</a>
           </li>
           <li>
@@ -58,26 +57,25 @@
           <!-- todo add login href -->
 <!-- _______________________________________________________________________________________________________________ -->
           <sec:authorize access="isAnonymous()">
-          <li>
-            <input value="login">
-          </li>
-          <li>
-            <input value="password">
-          </li>
-          <li>
-            <div class="view-buttn2">
-              <a href="#asd">Login</a>
-            </div>
-          </li>
-
-          </sec:authorize>
-          <sec:authorize access="isAnonymous()">
-          <li>
-            <div class="view-buttn2">
-              <a href="#asd">Logout</a>
-            </div>
-          </li>
-          </sec:authorize>
+            <li>
+                  <form id="login_form" action="spring_security_check" method="post">
+                      <input type="text" placeholder="Email" name="username">
+                      <input type="password" placeholder="Password" name="password">
+                      <div class="view-buttn2">
+                          <button class="submit">Login</button>
+                      </div>
+                  </form>
+            </li>
+           </sec:authorize>
+           <sec:authorize access="isAnonymous()">
+              <li>
+                <div class="view-buttn2">
+                    <form action="logout" method="post">
+                        <button class="submit">Logout</button>
+                    </form>
+                </div>
+              </li>
+           </sec:authorize>
 <!-- _______________________________________________________________________________________________________________ -->
         </ul>
       </nav>
